# ai-bench

./: .gitignore  .gitmodules  README.md  chat.py  chatgpt.py  eval.py  gemini.py  gemini_eval.py  gen.py  gen_test.py  gen_tests.py  gpt_eval.py  print_results.py  problem.py  problems.jsonl  problems_to_jsonl.py  requirements.txt  util.py
.githooks/: pre-commit
scripts/: bootstrap
tasks/: CMakeLists.txt
tasks/assert-tasks/example-task/: gen.cpp  problem-statement.md  solution.cpp
tasks/assert-tasks/graph-task/: gen.cpp  problem-statement.md  solution.cpp
